--- a/src/components/LoginForm/LoginForm.scss
+++ b/src/components/LoginForm/LoginForm.scss
@@ -1,4 +1,5 @@
 .login {
+	margin: 20px 0px;
 	display: flex;
 	flex-direction: column;
 	align-items: center;
